--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="card">
         <img src="https://t2.ea.ltmcdn.com/es/posts/8/3/2/lobo_gris_canis_lupus_24238_2_600.webp" class="card-img-top img-carrusel"alt="...">
         <div class="card-body">
-          <h5 class="card-title">Lobo 1</h5>
-          <p class="card-text">Lobo gris (Canis lupus)</p>
+          <h5 class="card-title">Lobo gris (Canis lupus)</h5>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
@@ -147,8 +147,8 @@
       <div class="card">
         <img src="https://t2.ea.ltmcdn.com/es/posts/8/3/2/lobo_iberico_canis_lupus_signatus_24238_3_600.webp"class="card-img-top img-carrusel" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Lobo 2</h5>
-          <p class="card-text">Lobo ibérico (Canis lupus signatus)</p>
+          <h5 class="card-title">Lobo ibérico (Canis lupus signatus)</h5>
+          <p class="card-text"></p>
         </div>
 
       </div>
@@ -157,34 +157,33 @@
       <div class="card">
         <img src="https://t2.ea.ltmcdn.com/es/posts/8/3/2/lobo_artico_canus_lupus_arctos_24238_4_600.webp" class="card-img-top img-carrusel" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Lobo 3</h5>
-          <p class="card-text">Lobo ártico (Canus lupus arctos)</p>
+          <h5 class="card-title">Lobo ártico (Canus lupus arctos)</h5>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
     <div class="col mb-4">
       <div class="card">
-        <img src="https://estaticos.muyinteresante.es/media/cache/400x300_thumb/uploads/images/gallery/5937e90a5bafe882f5bc09e6/gatitos-cesta-redes.jpg" class="card-img-top img-carrusel" alt="...">
+        <img src="https://t2.ea.ltmcdn.com/es/posts/8/3/2/lobo_siberiano_canis_lupus_albus_24238_8_600.webp" class="card-img-top img-carrusel" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Lobo 4</h5>
-          <p class="card-text">Lobo siberiano (Canis lupus albus)
+          <h5 class="card-title">Lobo siberiano (Canis lupus albus)</h5>
+          <p class="card-text"></p>
           </p>
         </div>
       </div>
     </div>
   </div>
   <div class="card">
-    <img src="https://estaticos.muyinteresante.es/media/cache/400x300_thumb/uploads/images/gallery/5937e90a5bafe882f5bc09e6/gatitos-cesta-redes.jpg" class="card-img-top img-carrusel" alt="...">
+    <img src="https://t2.ea.ltmcdn.com/es/posts/8/3/2/lobo_rojo_canis_rufus_24238_15_600.webp" class="card-img-top img-carrusel" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Lobo 5</h5>
-      <p class="card-text">Lobo rojo (Canis rufus)
-      </p>
+      <h5 class="card-title">Lobo rojo (Canis rufus)</h5>
+      <p class="card-text"></p>
     </div>
     <div class="card">
-      <img src="https://estaticos.muyinteresante.es/media/cache/400x300_thumb/uploads/images/gallery/5937e90a5bafe882f5bc09e6/gatitos-cesta-redes.jpg" class="card-img-top img-carrusel" alt="...">
+      <img src="https://t1.ea.ltmcdn.com/es/posts/8/3/2/lobo_del_himalaya_canis_himalayensis_24238_20_600.webp" class="card-img-top img-carrusel" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Lobo 6</h5>
-        <p class="card-text">Lobo del Himalaya (Canis himalayensis)
+        <h5 class="card-title">Lobo del Himalaya (Canis himalayensis)</h5>
+        <p class="card-text"></p>
         </p>
       </div>
   
